opam-version: "1.2"
version: "1.0.0"
synopsis: "Binary heap implementation"
maintainer: "Sai Venkata Krishnan <saigensha5.svkv@gmail.com>"
authors: ["Jean-Christophe Filliâtre"]
homepage: "https://www.lri.fr/~filliatr/software.en.html"
bug-reports: "https://github.com/UnixJunkie/bheap/issues"
dev-repo: "https://github.com/UnixJunkie/bheap.git"
license: "LGPL-2.1"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" 
  "ocamlfind"
  "obuild" {build}
]
